--- a/benefit.html
+++ b/benefit.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Benefits of joining the CodeIN-Community">
+    <meta name="description" content="Benefits of joining the Neura AI-Community">
     <title>Benefits of Joining Us</title>
     
 
@@ -153,7 +153,7 @@
   <div class="container">  
   <div class="guide">
     <h4 class="guide_heading"> Workshops and Meeting Sessions</h4>
-     <div class="guide_content">At CodeIn community, we organize various events on a regular basis. Generally, our events are related to the coding world. We collaborate with different communities from all over the world. We organize workshops on high demanding skills like Web Development, Augmented reality, etc. We also conduct meeting sessions for networking among students of various fields. 
+     <div class="guide_content">At Neura, we organize various events on a regular basis. Generally, our events are related to the coding world. We collaborate with different communities from all over the world. We organize workshops on high demanding skills like Web Development, Augmented reality, etc. We also conduct meeting sessions for networking among students of various fields. 
     </div>   
     </div>
     <div class="guide">
@@ -169,12 +169,12 @@
     </div>
     <div class="guide">
     <h3 class="guide_heading"> Exposure to Students and Mentors around the World</h3>
-    <div class="guide_content">At CodeIn, students join from all over the world. We have students as well as mentors, who come up with different places and experiences. This environment gives exposure to the members of our community. Here, we not only discuss coding but also other skills and get to know about other cultures and places too.  The CodeIn community gives exposure to members and helps them know about the coding world, events, opportunities, and people. 
+    <div class="guide_content">At NEURA AI, students join from all over the world. We have students as well as mentors, who come up with different places and experiences. This environment gives exposure to the members of our community. Here, we not only discuss coding but also other skills and get to know about other cultures and places too.  The NEURA community gives exposure to members and helps them know about the coding world, events, opportunities, and people. 
     </div>
     </div>
     <div class="guide">
-    <h3 class="guide_heading"> Previous Events at CodeIN Community </h3>
-    <div class="guide_content">CodeIN Community came up with the Spark-a-thon hackathon in collaboration with SparkAR and Re-Skills. This hackathon encouraged participation in the AR community. Spark-a-thon was a huge success with a total of 600+ participants. We have provided many such opportunities which helped students to grab knowledge of the topic and hands-on experience. Our events were based on practical and live examples. We also share information about ongoing events and swag opportunities. 
+    <h3 class="guide_heading"> Previous Events at NEURA AI </h3>
+    <div class="guide_content">NEURA AI Community came up with the Spark-a-thon hackathon in collaboration with SparkAR and Re-Skills. This hackathon encouraged participation in the AR community. Spark-a-thon was a huge success with a total of 600+ participants. We have provided many such opportunities which helped students to grab knowledge of the topic and hands-on experience. Our events were based on practical and live examples. We also share information about ongoing events and swag opportunities. 
     </div>
    </div>
    <div class="guide">
@@ -196,7 +196,7 @@
     </p>  
   </div>
     <br>
-    <strong>For any queries: Contact Saurav Mukherjee (Founder CodeIN Community):</strong>
+    <strong>For any queries: Contact: NEURA AI Team</strong>
     <div class="mentor-info">
       <div class="mentor-profile">
         <a href=" https://www.linkedin.com/in/sauravmukherjee44"> <i class="fab fa-linkedin"></i></a>
@@ -204,22 +204,22 @@
 
 
       <div class="mentor-profile">
-        <a href="https://discord.com/users/758681549993541684">
+        <a href="https://discord.com/users/">
           <i class="fab fa-discord"></i></a>
       </div>
 
       <div class="mentor-profile">
-        <a href="https://github.com/SauravMukherjee44">
+        <a href="https://github.com/Panchadip-128">
           <i class="fab fa-github"></i></a>
       </div>
 
       <div class="mentor-profile">
-        <a href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug">
+        <a href="https://www.youtube.com/channel/okoij_4ug">
           <i class="fab fa-youtube"></i></a>
       </div>
       
       <div class="mentor-profile">
-        <a href="https://twitter.com/mesourav44">
+        <a href="https://twitter.com/">
           <i class="fab fa-twitter"></i></a>
       </div>
     </div>
@@ -230,9 +230,9 @@
 <br>
 <br>  
 
-<a href="https://codeincommunity.bio.link/"><button type="button" class="btn pmd-btn-fab btn-warning pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join the Community</button></a><br>
+<a href="/"><button type="button" class="btn pmd-btn-fab btn-warning pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join the Community</button></a><br>
 <br>
-<a href="https://codeincommunity.com/#joinus"><button type="button" class="btn pmd-btn-fab btn-warning pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join our organising Team</button></a><br>
+<a href="/"><button type="button" class="btn pmd-btn-fab btn-warning pmd-ripple-effect pmd-btn-raised"><i class="material-icons pmd-sm"></i>Join our organising Team</button></a><br>
 <br>
   
   </div>
@@ -438,9 +438,9 @@
 				<div class="row">
 					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
 						<div class="widget">
-							<h3 class="footer-logo">CodeIN Community</h3>
+							<h3 class="footer-logo">Neura AI</h3>
 							<div class="textwidget">
-								<p>CodeIN Community is the Community of Coding Enthusiasts on Discord. Together We aim
+								<p>Neura AI is the Community of 2000+ Coding Enthusiasts at MAHE BLR. Together We aim
 									to explore the
 									untouched world of technology and Tremendous growth-making fields.</p>
 							</div>
@@ -463,8 +463,8 @@
 							<li><a href="#events">Events</a></li>
 							<li><a href="#">Hackathons</a></li>
 							<li><a href="#">Open Source</a></li>
-							<li><a href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform">Volunteer Group</a></li>
-							<li><a href="https://codeincommunity.bio.link/">Community</a></li>
+							<li><a href="/">Volunteer Group</a></li>
+							<li><a href="/">Community</a></li>
 						</ul>
 					</div>
 					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
@@ -473,11 +473,11 @@
 							<li>
 								<a
 									href="https://www.google.com/maps/place/Asansol,+West+Bengal/@23.6834541,86.8541898,11z/data=!3m1!4b1!4m5!3m4!1s0x39f71f0ea1022529:0xf888f7e7fd11cefe!8m2!3d23.6888636!4d86.9660638"><i
-										class="fas fa-map-marked-alt"></i> Location: Asansol,India-713305</a>
+										class="fas fa-map-marked-alt"></i> Location: Bengaluru,KA,India-511602</a>
 							</li>
 							<li>
-								<a href="mailto:codeincommunity@gmail.com"><i class="fas fa-envelope"></i> Email:
-									codeincommunity@gmail.com</a>
+								<a href="mailto:panchadip125@gmail.com"><i class="fas fa-envelope"></i> Email:
+									panchadip125@gmail.com</a>
 							</li>
 						</ul>
 					</div>
@@ -486,7 +486,7 @@
 		</div>
 		<ul class="socials">
       <li>
-				<a class="linkedin" href="https://www.linkedin.com/company/codein-community/mycompany/"
+				<a class="linkedin" href="/"
 					target="_blank">
 					<i class="fab fa-linkedin" style="color: rgb(10,102,194);" onmouseover="this.style.color='white'" onmouseout="this.style.color='#0A66C2'"></i></a>
 			</li>
@@ -496,21 +496,21 @@
 						onmouseout="this.style.color='#7289d9'"></i></a>
 			</li>
 			<li>
-				<a class="telegram" href="https://t.me/CodeINCommunity" target="_blank"><i class="fab fa-telegram" style="color:#0088cc;"  onmouseover="this.style.color='white'"
+				<a class="telegram" href="https://t.me/panchadip125" target="_blank"><i class="fab fa-telegram" style="color:#0088cc;"  onmouseover="this.style.color='white'"
 					onmouseout="this.style.color='#0088cc'"></i></a>
 			</li>
 			<li>
-				<a class="github" href="https://github.com/SauravMukherjee44/CodeIN-Community-Website"
+				<a class="github" href="https://github.com/Panchadip-128"
 					target="_blank"><i class="fab fa-github" style="color:#171515;"  onmouseover="this.style.color='white'"
 					onmouseout="this.style.color='#171515'"></i></a>
 			</li>
 			<li>
-				<a class="youtube" href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug" target="_blank"><i
+				<a class="youtube" href="/" target="_blank"><i
 						class="fab fa-youtube" style="color:#FF0000;"  onmouseover="this.style.color='white'"
 						onmouseout="this.style.color='#FF0000'"></i></a>
 			</li>
 			<li>
-				<a class="twitter" href="https://twitter.com/CodeinCommunity" target="_blank"><i
+				<a class="twitter" href="/" target="_blank"><i
 						class="fab fa-twitter" style="color: #1DA1F2";  onmouseover="this.style.color='white'"
 						onmouseout="this.style.color='#1DA1F2'"></i></a>
 			</li>
@@ -521,7 +521,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="copyright-content">
-							<p>Copyright © 2022 <a rel="nofollow" href="#">CodeIN Community</a> All Right Reserved</p>
+							<p>Copyright © 2025 <a rel="nofollow" href="#">Neura AI </a> All Right Reserved</p>
 						</div>
 					</div>
 				</div>
