--- a/teamMembers.html
+++ b/teamMembers.html
@@ -19,8 +19,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Core Team Members of CodeIN Community">
-    <title>CodeIN Core Team</title>
+    <meta name="description" content="Core Team Members of MBOSC Community">
+    <title>MBOSC Core Team</title>
     
 	<!-- open graph image for all social media -->
 	<meta property="og:image" itemprop="image" content="/">
@@ -1239,9 +1239,9 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
             <div class="widget">
-              <h3 class="footer-logo">CodeIN Community</h3>
+              <h3 class="footer-logo">MBOSC Community</h3>
               <div class="textwidget">
-                <p>CodeIN Community is the Community of Coding Enthusiasts on Discord. Together We aim
+                <p>MBOSC is the Community of Coding Enthusiasts fostering power of Open source contributions. Together We aim
                   to explore the
                   untouched world of technology and Tremendous growth-making fields.</p>
               </div>
@@ -1265,7 +1265,7 @@
               <li><a href="#">Hackathons</a></li>
               <li><a href="#">Open Source</a></li>
               <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform">Volunteer Group</a></li>
-              <li><a href="https://codeincommunity.bio.link/">Community</a></li>
+              <li><a href="#">Community</a></li>
             </ul>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
@@ -1277,8 +1277,8 @@
                     class="fas fa-map-marked-alt"></i> Location: Asansol,India-713305</a>
               </li>
               <li>
-                <a href="mailto:codeincommunity@gmail.com"><i class="fas fa-envelope"></i> Email:
-                  codeincommunity@gmail.com</a>
+                <a href="mailto:panchadip125@gmail.com"><i class="fas fa-envelope"></i> Email:
+                  panchadip125@gmail.com</a>
               </li>
             </ul>
           </div>
@@ -1287,29 +1287,29 @@
     </div>
     <ul class="socials">
       <li>
-        <a class="linkedin" href="https://www.linkedin.com/company/codein-community/mycompany/"
+        <a class="linkedin" href="#"
           target="_blank"><i class="fab fa-linkedin"></i></a>
       </li>
-      <li>
+      <!-- <li>
         <a class="discord" href=" https://discord.com/invite/sqFRzrj7f3" target="_blank"><i
             class="fab fa-discord"></i></a>
-      </li>
+      </li> -->
       <li>
-        <a class="telegram" href="https://t.me/CodeINCommunity" target="_blank"><i class="fab fa-telegram"
+        <a class="whatsapp" href="https://t.me/CodeINCommunity" target="_blank"><i class="fab fa-whatsapp"
             ></i></a>
       </li>
       <li>
         <a class="github" href="https://github.com/SauravMukherjee44/CodeIN-Community-Website"
           target="_blank"><i class="fab fa-github"></i></a>
       </li>
-      <li>
+      <!-- <li>
         <a class="youtube" href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug" target="_blank"><i
             class="fab fa-youtube"></i></a>
       </li>
       <li>
         <a class="twitter" href="https://twitter.com/CodeinCommunity" target="_blank"><i
             class="fab fa-twitter"></i></a>
-      </li>
+      </li> -->
     </ul>
     </div>
     <div id="copyright">
